--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <div class="top-panel">
     <button id="backBtn" class="back-btn">← POWRÓT</button>
     <div class="logo">FreeFilms</div>
+
+    <!-- NOWE: przyciski platform -->
+    <div id="platformButtons" class="platform-buttons"></div>
+
     <input id="searchInput" class="search-input" type="text" placeholder="Szukaj filmu/serialu..." autocomplete="off">
 </div>
 
